max vh widget to prevent overflow

--- a/src/neuroglancer/widget/segment_set_widget.css
+++ b/src/neuroglancer/widget/segment_set_widget.css
@@ -32,7 +32,7 @@
 .segment-set-widget .item-container {
   display: flex;
   flex-wrap: wrap;
-  max-height: 50vh;
+  max-height: 40vh;
 }
 
 .copy-all-segment-IDs-button {
